k8s/deployk8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recofilms-deploy
  labels:
    app: recofilms-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recofilms-app
  template:
    metadata:
      labels:
        app: recofilms-app
    spec:
      containers:
        - name: appclient
          image: recofilmsmlopsoct2023/movieflix:latest
          imagePullPolicy: "Always"
          ports:
          - containerPort: 8001
