k8s/servicek8s.yml
apiVersion: v1
kind: Service
metadata:
  name: recofilms-service
  labels:
    app: recofilms-app
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8001
    nodePort: 30001
    protocol: TCP
  selector:
    app: recofilms-app
