k8s/ingressk8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recofilms-app-ingress
  labels:
    app: recofilms-app
spec:
  defaultBackend:
    service:
      name: recofilms-service
      port:
        number: 6000
